# math

./: CMakeLists.txt  division.c  division.h  main.c  multiplication.c  multiplication.h
arithmetic_operations/: calculate_remainder.c  calculate_remainder.h  division.c  division.h  multiplication.c  multiplication.h  subtraction.c  subtraction.h  sum.c  sum.h
arithmetic_operations/head/: math_operations.c  math_operations.h
basic_number_theory/: factors_and_multiples.c  factors_and_multiples.h  greatest_common_divisor.c  greatest_common_divisor.h  least_common_multiple.c  least_common_multiple.h  prime_and_composite_numbers.c  prime_and_composite_numbers.h
exponents_and_roots/: cube_roots.c  cube_roots.h  exponent_laws.c  exponent_laws.h  powers.c  powers.h  square_roots.c  square_roots.h
fractions_decimals_and_percentages/: fraction_conversion.c  fraction_conversion.h  operations_with_fractions_and_decimals.c  operations_with_fractions_and_decimals.h  simplifying_fractions.c  simplifying_fractions.h  types_of_fractions.c  types_of_fractions.h
fractions_decimals_and_percentages/head/: math_utils.c  math_utils.h
numbers/: integers.c  integers.h  integers_numbers.c  integers_numbers.h  irrational_numbers.c  irrational_numbers.h  natural_numbers.c  natural_numbers.h  rational_numbers.c  rational_numbers.h  real_numbers.c  real_numbers.h  whole_numbers.c  whole_numbers.h
order_of_operations/: addition_and_subtraction.c  addition_and_subtraction.h  exponents_and_orders.c  exponents_and_orders.h  multiplication_and_division.c  multiplication_and_division.h  parentheses_and_brackets.c  parentheses_and_brackets.h
order_of_operations/head/: stack_operations.c  (+1 more)
ratios_and_proportions/: simplifying_ratios.c  simplifying_ratios.h  unit_rates.c  unit_rates.h
word_problems/: age_problems.c  age_problems.h  distance_speed_and_time_problems.c  distance_speed_and_time_problems.h  work_rate_problems.c  work_rate_problems.h
(+5 files in other folders)
